--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 <div class="mdl-card mdl-shadow--8dp daily-pic mdl-cell mdl-cell--8-col index-top-block">
 
     <!-- Pic & Slogan -->
-    <div class="mdl-card__media mdl-color-text--grey-50" style="background-image:url(/img/daily_pic.png)">
+    <div class="mdl-card__media mdl-color-text--grey-50" style="background-image:url(/img/狗.jpg)">
         <p class="index-top-block-slogan"><a href="#">
         
             
@@ -367,7 +367,7 @@
     <!-- LOGO -->
     <div class="something-else-logo mdl-color--white mdl-color-text--grey-600">
         <a href="#" target="_blank">
-            <img src="/img/logo.png" alt="logo" />
+            <img src="/img/长草颜.jpg" alt="logo" />
         </a>
     </div>
 
